# ODJFS-Licensing-Reports-Webscraper

./: .gitignore  README.md  config.py  doc_ai_test.ipynb  document_AI_run.py  flake.nix  main.py  pdf_links_first_50_pages.csv  pdf_processing_test.ipynb  pdf_text_extraction.py  pyproject.toml  requirements.txt  test_scraper.ipynb  text_extraction.py  webscraping.py
data/: nc_df_final.csv  pdf_links_final.csv
output/2024-2025/: center_data.csv  center_data_incomplete.csv  pdf_links.csv
output/2024-2025/Re-Runs/: LIC_center_data_working_links.csv  center_data.csv
output/2025-2026/: pdf_links.csv
test/: first_50_centers.csv  nc_first_50_pages.csv
