[project]
name = "odjfs-scraper"
version = "0.1.0"
description = "Webscrape childcare center licensing data from Ohio government website (includes PDFs as well...)"
authors = [
    {name = "Will-Blanton",email = "wrblanton2017@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pillow (==10.2.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.4,<8.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "google-cloud-documentai (>=3.5.0,<4.0.0)",
    "google-cloud-storage (>=3.1.1,<4.0.0)",
    "google-api-core (>=2.25.1,<3.0.0)",
    "google-cloud-documentai-toolbox (>=0.14.2a0,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
